feat: add basic layout

--- a/index.html
+++ b/index.html
@@ -16,7 +16,20 @@
             </div>
         </div>
         <div id="right-section">
-            
+            <div id="dummy-text-container">
+                <p id="dummy-text-top">This is not a real online service! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus, commodi!<br>
+                    Sign up now to get started.</p>
+                <p id="dummy-text-bottom">You know you want to.</p>
+            </div>
+            <div id="form-container">
+                <form action=""></form>
+            </div>
+            <div id="button-container">
+                <button id="sign-up-button">Create Account</button>
+            </div>
+            <div id="log-in-container">
+                <p>Already have an account? <a href="blank">Log in</a></p>
+            </div>
         </div>
     </div>
 </body>
