--- a/index.html
+++ b/index.html
@@ -21,9 +21,35 @@
                     Sign up now to get started.</p>
                 <p id="dummy-text-bottom">You know you want to.</p>
             </div>
-            <div id="form-container">
-                <form action=""></form>
-            </div>
+            <form action="" method="post">
+                <div id="form-container">
+                    <h3>Let's do this!</h3>
+                    <div class="input">
+                        <label for="first-name">FIRST NAME</label>
+                        <input type="text" name="first-name" id="input-first-name">
+                    </div>
+                    <div class="input">
+                        <label for="last-name">LAST NAME</label>
+                        <input type="text" name="last-name" id="input-last-name">
+                    </div>
+                    <div class="input">
+                        <label for="email">EMAIL</label>
+                        <input type="text" name="email" id="input-email">
+                    </div>
+                    <div class="input">
+                        <label for="phone-number">PHONE NUMBER</label>
+                        <input type="text" name="phone-number" id="input-phone-number">
+                    </div>
+                    <div class="input">
+                        <label for="password">PASSWORD</label>
+                        <input type="password" name="password" id="input-password">
+                    </div>
+                    <div class="input">
+                        <label for="confirm-password">CONFIRM PASSWORD</label>
+                        <input type="password" name="confirm-password" id="input-confirm-password">
+                    </div>
+                </div>
+            </form>
             <div id="button-container">
                 <button id="sign-up-button">Create Account</button>
             </div>
