feat: finish layout and styles

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <button id="sign-up-button">Create Account</button>
             </div>
             <div id="log-in-container">
-                <p>Already have an account? <a href="blank">Log in</a></p>
+                <p>Already have an account? <a href="_blank">Log in</a></p>
             </div>
         </div>
     </div>
