--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
                     </div>
                     <div class="input">
                         <label for="password">PASSWORD</label>
-                        <input type="password" name="password" id="input-password">
+                        <input type="password" name="password" id="input-password" class="error">
                     </div>
                     <div class="input">
                         <label for="confirm-password">CONFIRM PASSWORD</label>
-                        <input type="password" name="confirm-password" id="input-confirm-password">
+                        <input type="password" name="confirm-password" id="input-confirm-password" class="error">
                     </div>
                 </div>
             </form>
